[package]
name = "choosy"
description = "Choosy program that launches other programs depending on its arguments"
repository = "https://github.com/connorworley/choosy"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
dirs = "5.0.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
